# quickcheck-quid

./: .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  ChangeLog.md  README.md  Test-QuickCheck-Quid.html  build-clean.sh  build.sh  doc-index.html  doc-index.json  hie.yaml  index.html  package.yaml  quickcheck-quid.cabal  quickcheck-quid.haddock  test.sh
.github/workflows/: build.yml
src/: Test.QuickCheck.Quid.html
src/example/Test/QuickCheck/Quid/: Example.hs
src/internal/Internal/Test/QuickCheck/Quid/Combinators/: Chunk.hs  Prefix.hs  Size.hs
src/internal/Internal/Test/QuickCheck/Quid/Representations/: Decimal.hs  Hexadecimal.hs  Latin.hs
src/lib/Test/QuickCheck/: Natural.hs  Quid.hs
src/lib/Test/QuickCheck/Quid/: Internal.hs
src/public/Test/QuickCheck/: Quid.hs
src/quickcheck-quid-example/Test/QuickCheck/Quid/: Example.hs
src/quickcheck-quid-internal/Internal/Test/: QuickCheck.hs
src/quickcheck-quid-internal/Internal/Test/QuickCheck/: Quid.hs
src/quickcheck-quid-internal/Internal/Test/QuickCheck/Quid/: Representations.hs
src/quickcheck-quid-internal/Internal/Test/QuickCheck/Quid/Combinators/: Chunked.hs  Prefix.hs  Size.hs
src/quickcheck-quid-internal/Internal/Test/QuickCheck/Quid/Representations/: Decimal.hs  Hexadecimal.hs  Latin.hs  UppercaseLatin.hs
src/quickcheck-quid-internal/Internal/Text/: Read.hs
src/quickcheck-quid-internal/Test/QuickCheck/Quid/: Internal.hs
src/quickcheck-quid-test/Test/QuickCheck/: QuidSpec.hs
src/quickcheck-quid-test/Test/QuickCheck/Quid/Combinators/: PrefixSpec.hs
src/quickcheck-quid-test/Test/QuickCheck/Quid/Representations/: HexadecimalSpec.hs  LatinSpec.hs
src/quickcheck-quid/Test/QuickCheck/: Quid.hs
src/test/Test/Hspec/: Unit.hs
src/test/Test/QuickCheck/: QuidSpec.hs
src/test/Test/QuickCheck/Quid/Combinators/: PrefixSpec.hs
src/test/Test/QuickCheck/Quid/Representations/: DecimalSpec.hs  HexadecimalSpec.hs  LatinSpec.hs
