cabal-version:  3.0
name:           quickcheck-quid
version:        0.0.1
synopsis:       Quasi-unique identifiers for QuickCheck
description:    Quasi-unique identifiers for QuickCheck.
bug-reports:    https://github.com/jonathanknowles/quickcheck-quid/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing

extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-quid

library
    hs-source-dirs:
        src/quickcheck-quid
    exposed-modules:
        Test.QuickCheck.Quid
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , quickcheck-quid-internal

library quickcheck-quid-internal
    hs-source-dirs:
        src/quickcheck-quid-internal
    exposed-modules:
        Test.QuickCheck.Quid.Internal
    default-language:
        Haskell2010
    build-depends:
        QuickCheck
      , base >=4.7 && <5
      , containers
      , deepseq
      , extra
      , hashable
      , text

test-suite quickcheck-quid-test
    main-is:
        Spec.hs
    hs-source-dirs:
        src/quickcheck-quid-test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.QuidSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        QuickCheck
      , base >=4.7 && <5
      , containers
      , hspec
      , pretty-simple
      , quickcheck-classes
      , quickcheck-quid
      , quickcheck-quid-internal
      , text
