cabal-version:  3.0
name:           quickcheck-quid
version:        0.0.1
bug-reports:    https://github.com/jonathanknowles/quickcheck-quid/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2023 Jonathan Knowles
category:       Testing
synopsis:       Quasi-unique identifiers for QuickCheck
description:
    Quasi-unique identifiers for QuickCheck.

    For the most up-to-date documentation, please view the following page:

    https://github.com/jonathanknowles/quickcheck-quid/blob/main/README.md

extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-quid

common dependency-base
    build-depends:base
common dependency-containers
    build-depends:containers
common dependency-deepseq
    build-depends:deepseq
common dependency-extra
    build-depends:extra
common dependency-fmt
    build-depends:fmt
common dependency-hashable
    build-depends:hashable
common dependency-hspec
    build-depends:hspec
common dependency-pretty-simple
    build-depends:pretty-simple
common dependency-primes
    build-depends:primes
common dependency-QuickCheck
    build-depends:QuickCheck
common dependency-quickcheck-classes
    build-depends:quickcheck-classes
common dependency-text
    build-depends:text

library
    import:
      , dependency-base
    hs-source-dirs:
        src/public
    exposed-modules:
        Test.QuickCheck.Quid
    default-language:
        Haskell2010
    build-depends:
      , quickcheck-quid:internal

library example
    import:
      , dependency-base
      , dependency-QuickCheck
    hs-source-dirs:
        src/example
    exposed-modules:
        Test.QuickCheck.Quid.Example
    default-language:
        Haskell2010
    build-depends:
      , quickcheck-quid

library internal
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-extra
      , dependency-hashable
      , dependency-QuickCheck
      , dependency-text
    hs-source-dirs:
        src/internal
    exposed-modules:
        Internal.Test.QuickCheck
        Internal.Test.QuickCheck.Quid
        Internal.Test.QuickCheck.Quid.Combinators.Chunk
        Internal.Test.QuickCheck.Quid.Combinators.Prefix
        Internal.Test.QuickCheck.Quid.Combinators.Size
        Internal.Test.QuickCheck.Quid.Representations
        Internal.Test.QuickCheck.Quid.Representations.Decimal
        Internal.Test.QuickCheck.Quid.Representations.Hexadecimal
        Internal.Test.QuickCheck.Quid.Representations.Latin
        Internal.Text.Read
    default-language:
        Haskell2010
    build-depends:

test-suite test
    import:
      , dependency-base
      , dependency-containers
      , dependency-fmt
      , dependency-hspec
      , dependency-pretty-simple
      , dependency-primes
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-text
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.QuidSpec
        Test.QuickCheck.Quid.Combinators.PrefixSpec
        Test.QuickCheck.Quid.Representations.DecimalSpec
        Test.QuickCheck.Quid.Representations.HexadecimalSpec
        Test.QuickCheck.Quid.Representations.LatinSpec
        Test.Hspec.Unit
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , quickcheck-quid
      , quickcheck-quid:internal
